--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+.card img{
+  width: 300px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.card {
+  width: 300px;
+   align-content: center;
+   border: 1px solid grey;
+   overflow: hidden;
+   margin-bottom: 10px;
+   margin-right: 10px;
+ }
+
+form #input{
+  color: red;
+  font-size: 1.2rem;
+  font-weight: bold;
+  width: 100%;   
+}.card-grid{
+  display: flex;
+  /* width: 200px; */
+  flex-wrap: wrap;
+  flex-direction: row;
 }
+ body {
+   padding: 20px;
+ };
+
+ 
